Fixed navbar grid spacing

--- a/main.css
+++ b/main.css
@@ -44,8 +44,8 @@
   position: fixed;
   height: 50px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   margin: auto;
 }
 
